--- a/style_outline.css
+++ b/style_outline.css
@@ -1,30 +1,26 @@
-
-
 /* ******************************
 		会社概要
 ******************************** */
-/*両サイドに余白を作る*/
+
+/* bodyの両サイドに余白を作る */
 .overview{
-	padding-left: 8em;
-	padding-right: 8em;
+	padding-left: 10%;
+	padding-right: 10%;
 }
 
-
-
-p {
-	padding-left: 2em;
-	margin-bottom: 30px;
-}
-
-
-
+/* 会社概要部分*/
 h1 {
 background: #BDBDBD;    /*背景色*/
 padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
+/* 各項目の本文の内容のインデントを下げる*/
+p {
+	padding-left: 2em;
+	margin-bottom: 30px;
+}
 
-/*文字にスタイルをつける*/
+/*各項目の文字にスタイルをつける*/
 .p1 {                  /*縦のライン*/
   position: relative;
   padding: .25em 0 .5em .75em;
@@ -40,22 +36,20 @@ padding: 0.5em;         /*文字まわり（上下左右）の余白*/
   border-bottom: 1px solid #ccc;
 }
 
+/* 認定パートナー部分*/
 .partner_wrapper {
 	margin-left: 2em;
 }
 
-
 .partner {
-	margin: 30px 0;
+	margin: 30px 0; /* 上下に空白を開ける */
 }
-
-
 
 /*本社と東京オフィスのテキスト部分*/
 .google-box {
 	float: left;
 	width: 460px;
-	height: 300px;
+	height: 150px;
     margin: 0 10px 0 15px;
     padding: 0;
     text-align: left;
@@ -64,9 +58,12 @@ padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 /*各地図の位置*/
 .google-box2 {
 	float: left;
-    width: 260px;
-    margin: 10px 0 5px 0;
+    margin: 10px 0 40px 0;
     padding: 0;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 450px;
 }
 
 /*floatをクリアする*/
@@ -77,4 +74,172 @@ padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 }
 
 
+
+
+
+/* ******************************
+	会社概要タブレット用CSS
+******************************** */
+@media screen and (max-width: 768px){
+
+
+
+/* bodyの両サイドに余白を作る */
+.overview{
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 0.95em;	/* タブレット用変更箇所 */
+}
+
+/* 会社概要部分*/
+h1 {
+background: #BDBDBD;    /*背景色*/
+padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+}
+
+/* 各項目の本文の内容のインデントを下げる*/
+p {
+	padding-left: 2em;
+	margin-bottom: 30px;
+}
+
+/*各項目の文字にスタイルをつける*/
+.p1 {                  /*縦のライン*/
+  position: relative;
+  padding: .25em 0 .5em .75em;
+  border-left: 6px solid #3498db;
+}
+.p1::after {          /*横のライン*/
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  width: 100%;
+  height: 0;
+  border-bottom: 1px solid #ccc;
+}
+
+/* 認定パートナー部分*/
+.partner_wrapper {
+	margin-left: 2em;
+}
+
+.partner {
+	margin: 30px 0; /* 上下に空白を開ける */
+}
+
+/*本社と東京オフィスのテキスト部分*/
+.google-box {
+	float: left;
+	width: 460px;
+	height: 150px;
+    margin: 0 10px 0 15px;
+    padding: 0;
+    text-align: left;
+}
+
+/*各地図の位置*/
+.google-box2 {
+	float: left;
+    margin: 10px 0 40px 0;
+    padding: 0;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 450px;
+}
+
+/*floatをクリアする*/
+.clear {
+    clear: both;
+    margin: 0;
+    padding: 0;
+}
+
+}
+
+
+
+
+
+/* ******************************
+	会社概要スマホ用CSS
+******************************** */
+@media screen and (max-width:640px){
+
+
+
+/* bodyの両サイドに余白を作る */
+.overview{
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 0.85em;	/* スマホ用変更箇所 */
+}
+
+/* 会社概要部分*/
+h1 {
+background: #BDBDBD;    /*背景色*/
+padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+}
+
+/* 各項目の本文の内容のインデントを下げる*/
+p {
+	padding-left: 2em;
+	margin-bottom: 30px;
+}
+
+/*各項目の文字にスタイルをつける*/
+.p1 {                  /*縦のライン*/
+  position: relative;
+  padding: .25em 0 .5em .75em;
+  border-left: 6px solid #3498db;
+}
+.p1::after {          /*横のライン*/
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  width: 100%;
+  height: 0;
+  border-bottom: 1px solid #ccc;
+}
+
+/* 認定パートナー部分*/
+.partner_wrapper {
+	margin-left: 2em;
+}
+
+.partner {
+	margin: 30px 0; /* 上下に空白を開ける */
+}
+
+/*本社と東京オフィスのテキスト部分*/
+.google-box {
+	float: left;
+	width: 460px;
+	height: 150px;
+    margin: 0 10px 0 15px;
+    padding: 0;
+    text-align: left;
+}
+
+/*各地図の位置*/
+.google-box2 {
+	float: left;
+    margin: 10px 0 40px 0;
+    padding: 0;
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 450px;
+}
+
+/*floatをクリアする*/
+.clear {
+    clear: both;
+    margin: 0;
+    padding: 0;
+}
+
+}
 
