--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -3,46 +3,58 @@
 ******************************** */
 @media screen and (min-width: 769px){
 
+
+
 body{
-	width: 1366px;		/*‘S‘Ì‚Ì‰¡•*/
-	padding-left: 8em;		/*¶‰E‚Ì’²®•*/
-	padding-right: 8em;
+	/*width: 1366px;		‘S‘Ì‚Ì‰¡•*/
+	padding-left: 10%;		/* —¼’[‚É‹ó”’ */
+	padding-right: 10%;
 }
 
 h1 {
 	background: #BDBDBD;    /*”wŒiF*/
 	padding: 0.5em;         /*•¶š‚Ü‚í‚èiã‰º¶‰Ej‚Ì—]”’*/
+	font-size: 35;
 }
 
-
+/* Œo‰c—”O‰ºŒ©o‚µ */
 .text_1 {
 	text-align: center;
-	font-size: 20;
-	font-weight: 600; 
-	margin: 50px 0;
-	/*margin-right: 200px;
-	margin-left: 200px;*/
-	position: relative;
+	font-size: 25;
+	font-weight: 600; 		/* ƒtƒHƒ“ƒg‚Ì”Z‚³ */
+	margin: 50px 0;		/* ã‰º‚É‹ó”’ */
+	position: relative;		
 	padding: 0.25em 0;
 }
-.text_1:after {
-content: "";
-display: block;
-height: 4px;
-background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
-background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+.text_1:after {		/* Œ©o‚µ‰ºü */
+	content: "";
+	display: block;
+	height: 4px;
+	background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
 }
-
-
 
 p{
 	text-align: center;		/*•¶Í’†‰›‘µ‚¦*/
-	line-height:200%	
+	line-height: 300%;	/* sŠÔ */
+	margin: 70px 0;
 }
 
 
-/**** Ğ’·‚ ‚¢‚³‚Â‚æ‚è‰º•” *****/
+
+/************** Ğ’·‚ ‚¢‚³‚Â‚æ‚è‰º ****************/
+
+
+
+.container {
+	position: relative;
+}
+
+.top-words {
+	margin-bottom: 50px;
+	padding-left:2em;
+}
 
 h2{
 	text-align: left;	
@@ -51,106 +63,111 @@ h2{
 	border-left: 6px solid #ccc;
 }
 
-
-
-
-
-
-.container {
-  position: relative;
-}
-
-.top-words {
-	/*margin-right: 550px;*/
-	margin-bottom: 50px;
-	padding-left:7em;
-}
-
 .hello {
-	margin-top: 100px;
-	padding-left:8em;
+	margin-top: 50px;
+	padding-left: 3em;
 	font-style: italic;
-	font-family: gSTKaitih, gƒqƒ‰ƒMƒm–¾’© Pro W3, gHiragino Mincho Proh, serif;
-	font-weight: 800; 
+	/* font-family: gSTKaitih, gƒqƒ‰ƒMƒm–¾’© Pro W3, gHiragino Mincho Proh, serif; */
+	/* font-weight: 800;  */
 	line-height:300%
 }
 
-.list {
-    padding: 8px 19px;
-    margin: 2em 30em 2em 0;
-    color: #2c2c2f;
-    background: #cde4ff;
-    border-top: solid 5px #5989cf;
-    border-bottom: solid 5px #5989cf;
+.president {
+	float: right;
+	top: 50px;
+	right: 0px;
+	height: 500px;
+	margin-left: 50px;
 }
 
-
-.president {
+img {
 	float:right;
 	top: 50px;
 	right: 0px;
-	/* width: 500px; */
-	height: 500px;
-	margin-left: 50px;
-	/* margin-bottom: 50px; */
+	max-width: 400px;
+	max-height: 381px;
+	margin-bottom: 25px;
 }
 
 .presidentTx {
 	text-align: right;
 	margin-top: 20px;
 }
-/*img {
-	float:right;
-	top: 50px;
-	right: 0px;
-	width: 500px;
-	margin-bottom: 50px;
-	
-}*/
+
+.list {
+    padding: 8px 19px;
+    margin: 2em 0em 2em 0;
+    color: #2c2c2f;
+    background: #cde4ff;
+    border-top: solid 5px #5989cf;
+    border-bottom: solid 5px #5989cf;
+    font-family: gSTKaitih, gƒqƒ‰ƒMƒm–¾’© Pro W3, gHiragino Mincho Proh, serif;
+	font-weight: 800;
+}
 
 }
+
+
+
+
 
 /* ******************************
 	Œo‰c—”Oƒ^ƒuƒŒƒbƒg—pCSS
 ******************************** */
 @media screen and (max-width: 768px){
- 
 
- 
-/* ‚±‚±‚©‚ç’Êí‚ÌCSS */
+
+
+body{
+	/*width: 1366px;		‘S‘Ì‚Ì‰¡•*/
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+h1 {
+	background: #BDBDBD;    /*”wŒiF*/
+	padding: 0.5em;         /*•¶š‚Ü‚í‚èiã‰º¶‰Ej‚Ì—]”’*/
+}
+
+.text_1 {
+	text-align: center;
+	font-size: 16;
+	font-weight: 600; 
+	margin: 50px 0;
+	/*margin-right: 200px;
+	margin-left: 200px;*/
+	position: relative;
+	padding: 0.25em 0;
+}
+.text_1:after {
+	content: "";
+	display: block;
+	height: 4px;
+	background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+}
 
 p {
+	text-align: center;		/*•¶Í’†‰›‘µ‚¦*/
+	line-height:200%	
 	padding-left:2em;
-	font-size: 12;
+	font-size: 14;
 }
 
-h3{
-margin-right: 50px;
-margin-left: 50px;
-position: relative;
-font-size: 14;
-}
-h3:after {
-content: "";
-display: block;
-height: 4px;
-background: -moz-linear-gradient(to right, rgb(230, 90, 90), transparent);
-background: -webkit-linear-gradient(to right, rgb(230, 90, 90), transparent);
-background: linear-gradient(to right, rgb(230, 90, 90), transparent);
-}
 
+/************** Ğ’·‚ ‚¢‚³‚Â‚æ‚è‰º ****************/
 
 
 
 .container {
-  position: relative;
+	position: relative;
 }
 
 .top-words {
 	display: block;
 	/* padding-left:7em;*/
 	text-align: center;
-	
 }
 
 h2{
@@ -159,13 +176,26 @@ h2{
 	background-color: #f6f6f6;
 	border-left: 6px solid #ccc;
 }
+.president {
+	float:right;
+	right: 0px;
+	width: auto;
+	height: auto;
+	margin-left: 50px;
+}
 
+img {
+	float:right;
+	top: 50px;
+	right: 0px;
+	max-width: 300px;
+	max-height: 285px;
+	margin-bottom: 25px;
+}
 
-img{
-max-width: 100%;
-height: auto;
-width /***/:auto;
-padding-left:2em;
+.presidentTx {
+	text-align: right;
+	margin-top: 20px;
 }
 
 .hello {
@@ -173,11 +203,22 @@ padding-left:2em;
 	font-style: italic;
 	font-family: gSTKaitih, gƒqƒ‰ƒMƒm–¾’© Pro W3, gHiragino Mincho Proh, serif;
 	font-weight: 800; 
-	font-size: 12;
+	font-size: 14;
+	line-height: 300%
+}
+
+.list {
+    padding: 8px 19px;
+    margin: 2em 0em 2em 0;
+    color: #2c2c2f;
+    background: #cde4ff;
+    border-top: solid 5px #5989cf;
+    border-bottom: solid 5px #5989cf;
+}
+
 }
 
 
-}
 
 
 
@@ -187,38 +228,54 @@ padding-left:2em;
 @media screen and (max-width:640px){
 
 
+
+
+h1 {
+	background: #BDBDBD;    /*”wŒiF*/
+	padding: 0.5em;         /*•¶š‚Ü‚í‚èiã‰º¶‰Ej‚Ì—]”’*/
+}
+
+.text_1 {
+	text-align: center;
+	font-size: 16;
+	font-weight: 600; 
+	margin: 50px 0;
+	/*margin-right: 200px;
+	margin-left: 200px;*/
+	position: relative;
+	padding: 0.25em 0;
+}
+.text_1:after {
+	content: "";
+	display: block;
+	height: 4px;
+	background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
+	background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+}
+
+
 p {
+	text-align: center;		/*•¶Í’†‰›‘µ‚¦*/
+	line-height:200%	
 	padding-left:2em;
 	font-size: 12;
 }
 
-h3{
-margin-right: 50px;
-margin-left: 50px;
-position: relative;
-font-size: 14;
-}
-h3:after {
-content: "";
-display: block;
-height: 4px;
-background: -moz-linear-gradient(to right, rgb(230, 90, 90), transparent);
-background: -webkit-linear-gradient(to right, rgb(230, 90, 90), transparent);
-background: linear-gradient(to right, rgb(230, 90, 90), transparent);
-}
 
+
+/************** Ğ’·‚ ‚¢‚³‚Â‚æ‚è‰º ****************/
 
 
 
 .container {
-  position: relative;
+	position: relative;
 }
 
 .top-words {
 	display: block;
 	/* padding-left:7em;*/
 	text-align: center;
-	
 }
 
 h2{
@@ -227,13 +284,27 @@ h2{
 	background-color: #f6f6f6;
 	border-left: 6px solid #ccc;
 }
+.president {
+	right: 0px;
+	width: 100%;
+	height: auto;
+	margin-left: 50px;
+}
 
+img {
+	float:right;
+	top: 50px;
+	right: 0px;
+	max-width: 300px;
+	max-height: 285px;
+	margin-bottom: 25px;
+}
 
-img{
-max-width: 100%;
-height: auto;
-width /***/:auto;
-padding-left:2em;
+.presidentTx {
+	width: 100%;
+	text-align: right;
+	margin-top: 320px;
+	margin-bottom: 20px;
 }
 
 .hello {
@@ -242,7 +313,19 @@ padding-left:2em;
 	font-family: gSTKaitih, gƒqƒ‰ƒMƒm–¾’© Pro W3, gHiragino Mincho Proh, serif;
 	font-weight: 800; 
 	font-size: 12;
+	line-height:300%
+}
+
+.list {
+    padding: 8px 19px;
+    margin: 2em 0em 2em 0;
+    color: #2c2c2f;
+    background: #cde4ff;
+    border-top: solid 5px #5989cf;
+    border-bottom: solid 5px #5989cf;
+}
+
 }
 
 
-}
+
