--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -17,9 +17,20 @@ h1 {
 	font-size: 35;
 }
 
+#container {
+	padding-left:2em;
+}
+
+h2{
+	text-align: left;	
+	padding: .5em .75em;	
+	background-color: #f6f6f6;
+	border-left: 6px solid #ccc;
+}
+
 /* Œo‰c—”O‰ºŒ©o‚µ */
 .text_1 {
-	text-align: left;
+	text-align: center;
 	font-size: 25;
 	font-weight: 600; 		/* ƒtƒHƒ“ƒg‚Ì”Z‚³ */
 	margin: 50px 0;		/* ã‰º‚É‹ó”’ */
@@ -36,7 +47,7 @@ h1 {
 }
 
 p{
-	text-align: left;		/*•¶Í’†‰›‘µ‚¦*/
+	text-align: center;		/*•¶Í’†‰›‘µ‚¦*/
 	line-height: 300%;	/* sŠÔ */
 	margin: 70px 60px;
 }
@@ -47,13 +58,20 @@ p{
 
 
 
-.container {
+.container1 {
 	position: relative;
 }
 
 .top-words {
 	margin-bottom: 50px;
 	padding-left:2em;
+}
+
+#upper_conteiner {
+	padding-left: 2em;
+	background-color: yellow;
+	height: 600px;
+	display: table;
 }
 
 h2{
@@ -70,14 +88,16 @@ h2{
 	/* font-family: gSTKaitih, gƒqƒ‰ƒMƒm–¾’© Pro W3, gHiragino Mincho Proh, serif; */
 	/* font-weight: 800;  */
 	line-height:300%
+	display:table-cell;
 }
 
 .president {
-	float: right;
+	float: left;
 	top: 50px;
 	right: 0px;
 	height: 500px;
 	margin-left: 50px;
+	display:table-cell;
 }
 
 img {
@@ -94,18 +114,26 @@ img {
 	margin-top: 20px;
 }
 
-.list {
+.list{
+	font-size: 140%;
+	width: 40%;
     padding: 8px 19px;
-    margin: 2em 0em 2em 3em;
-    color: #2c2c2f;
-    background: #cde4ff;
-    border-top: solid 5px #5989cf;
-    border-bottom: solid 5px #5989cf;
+    margin: 2em 0 2em 3em;
+    color: #000000;
+    /*background: #E6E6E6;*/
+    border-top: double 7px #000000;
+    border-bottom: double 7px #000000;
     font-family: gSTKaitih, gƒqƒ‰ƒMƒm–¾’© Pro W3, gHiragino Mincho Proh, serif;
 	font-weight: 800;
 }
+.list p {
+    margin: 0; 
+    padding: 0;
+}
 
 p#p1 {
+	text-align: left;
+	margin-left: 15%;
 	font-size: 120%;
 	font-weight: boilder;
 }
@@ -133,6 +161,10 @@ body{
 h1 {
 	background: #BDBDBD;    /*”wŒiF*/
 	padding: 0.5em;         /*•¶š‚Ü‚í‚èiã‰º¶‰Ej‚Ì—]”’*/
+}
+
+#container {
+	padding-left:2em;
 }
 
 .text_1 {
@@ -166,7 +198,7 @@ p {
 
 
 
-.container {
+.container1 {
 	position: relative;
 }
 
@@ -247,6 +279,10 @@ h1 {
 	padding: 0.5em;         /*•¶š‚Ü‚í‚èiã‰º¶‰Ej‚Ì—]”’*/
 }
 
+#container {
+	padding-left:2em;
+}
+
 .text_1 {
 	text-align: center;
 	font-size: 16;
@@ -280,7 +316,7 @@ p {
 
 
 
-.container {
+.container1 {
 	position: relative;
 }
 
