--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@
 	.clear { clear:both;}
 
 	/* ヘッダー関連 */
-	.header {width: 1200px; margin: 0; padding: 0; height: 133px;}
-	img.rogo { height: 115px; margin-bottom: -4px;}
-	.menu { width:1200px; height: 132px; float: left; background: #1f499d; font-weight: bold; padding:0; padding-bottom:10px; margin-bottom:0;}
-	.menuList{ display: inline-block; width: 12%; height: 132px; position:relative; font-size: 18px; text-align: center; line-height: 1.1em;}
-	.menuRogo{ display: inline-block;  height: 132px; position:relative; background-color:#1f499d;}
+	.header {width: 1200px; margin: 0; padding: 0; height: 80px;}
+	img.rogo { height: 76px; margin-bottom: -4px; padding-left:15px;}
+	.menu { width:1200px; height: 80px; float: left; background: #1f499d; font-weight: bold; padding:0; padding-bottom:10px; margin-bottom:0;}
+	.menuList{ display: inline-block; width: 13%; height: 80px; position:relative; font-size: 18px; text-align: center; line-height: 1.1em;}
+	.menuRogo{ display: inline-block;  height: 80px; position:relative; background-color:#1f499d;}
 	.menuHome{ display: none; }
 	.menuList a {color: white; position:absolute; bottom:0; text-align: center; text-decoration: none;}
 	.menuList:last-child a{ color: white; text-decoration: none; text-align: center; text-decoration: none;}
@@ -45,7 +45,7 @@
 	}
 	
 	.footer{width:1200px;}
-	.LinkImageBox{width: 530px; float:left; margin-top: 5px; margin-bottom: 5px;}
+	.LinkImageBox{width: 530px; float:left; margin-top: 5px; margin-bottom: 50px;}
 	.ricNaviImageBox{width: 250px; float:left; margin-left: 10px;}
 	img.ricNaviImage{width: 183px;}
 	img.LinkricNaviImageRespons{width: 183px;}
@@ -66,10 +66,16 @@
 	.footerMenuLink:hover {color: black; text-decoration: none; font-size: 1em;}
 	.footerMenuLink:active {color: black; text-decoration: none; font-size: 1em;}
 
-	.copyright{text-align:center; font-size: 13px; padding-top: 50px;}
+	.copyright{text-align:center; font-size: 13px; margin-top: 50px; padding: 8px 0; background-color: #1f499d;}
 
 	/* 社員紹介関連 */
-	.pageTitle { font-size: 50px; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
+	.pageTitle {
+		font-size: 50px;
+		text-align: center;
+		background: lightgray;
+		padding-top: 25px;
+		padding-bottom: 25px;
+	}
 	
 	.testFrame{ width: 200px; height: 300px; border: solid 1px black; }
 	.staffCenter{ width: 755px; margin:auto; padding:auto;}
@@ -314,7 +320,7 @@
 	.footerMenuLink:hover {color: black; text-decoration: none; }
 	.footerMenuLink:active {color: black; text-decoration: none;}
 
-	.copyright{text-align:center; font-size: 2vw; padding-top: 15px;}
+	.copyright{text-align:center; font-size: 2vw; padding-top: 15px; background-color: #1f499d;}
 
 
 	/* 社員紹介関連 */
@@ -549,7 +555,7 @@
 	.footerMenuLink:hover {color: black; text-decoration: none; }
 	.footerMenuLink:active {color: black; text-decoration: none;}
 
-	.copyright{text-align:center; font-size: 2vw; padding-top: 15px;}
+	.copyright{text-align:center; font-size: 2vw; padding-top: 15px; background-color:#1f499d;}
 
 	/* 社員紹介関連 */
 	.pageTitle { font-size: 50px; text-align: center; background: lightgray; padding-top: 25px; padding-bottom: 25px;}
