--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -9,21 +9,25 @@ body{
 	width: 1366px;		/*全体の横幅*/
 	padding-left: 10%;		/* 両端に空白 */
 	padding-right: 10%;
+	font-family: "游ゴシック";
 }
 
 h1 {
 	background: #BDBDBD;    /*背景色*/
 	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 	font-size: 35;
+	text-align: center;
 }
 
 #container {
-	padding-left:2em;
+	padding: 0 2em 0 2em;
+	margin-top: 2%;
 }
 
 h2{
-	text-align: left;	
-	padding: .5em .75em;	
+	text-align: left;
+	padding: .5em .75em;
+	margin-bottom: 20px;
 	background-color: #f6f6f6;
 	border-left: 6px solid #ccc;
 }
@@ -33,7 +37,7 @@ h2{
 	text-align: center;
 	font-size: 25;
 	font-weight: 600; 		/* フォントの濃さ */
-	margin: 50px 0;		/* 上下に空白 */
+	margin: 40px 170px;		/* 上下に空白 */
 	position: relative;		
 	padding: 0.25em 0;
 }
@@ -48,8 +52,9 @@ h2{
 
 p#upper_text{
 	text-align: center;		/*文章中央揃え*/
-	line-height: 300%;	/* 行間 */
-	margin: 70px 60px;
+	line-height: 200%;	/* 行間 */
+	margin: 70px 60px 60px 60px;
+	font-size: 110%;
 }
 
 
@@ -63,56 +68,46 @@ p#upper_text{
 }
 
 .top-words {
-	margin-bottom: 50px;
+	margin-bottom: 10px;
 	padding-left:2em;
 }
 
-
-
-
 #upper_conteiner {
 	padding: 0 2em;
-	background-color: yellow;
-	height: 600px;
-	/*display: table;*/
+	/*background-color: yellow;*/
+	height: 400px;
 	width: 100%;
-	margin: 0 auto;
+	margin: 0 20px;
+	display: table;
 }
 
-
 .hello {
-	/*display: table-cell;*/
-	width: 50%;
+	width: 55%;
 	height: 100%;
-	background-color: #58FA58;
-	padding: 0;
-	float: left;
-	line-height:300%;
+	margin: 20px;
+	padding: 40px 0 30px 0;
+	/*background-color: #58FA58;*/
+	line-height: 215%;
+	display: table-cell;
+	vertical-align: top;
 }
 
 .president {
-	text-align: right;
-	background-color: #81F7F3;
-	width: auto;
-	/*margin-left: 50px;
-	width: 400px;
-	background-color: #81F7F3;
-	float: right;
-	display: table-cell;*/
+	display: table-cell;
+	/*text-align: right;*/
+	/*background-color: #81F7F3;*/
+	width: 100%;
+	padding: 0 0 0 40px;
 }
 
 img {
-	/*float:right;
-	top: 50px;
-	right: 0px;
-	max-width: 400px;
-	max-height: 381px;
-	margin-bottom: 25px;*/
+
 }
 
 .presidentTx {
-	/*text-align: right;
-	margin-top: 20px;*/
+	width: auto;
+	margin: 10px 180px 0 0;
+	text-align:right;
 }
 
 .clear {
@@ -120,40 +115,39 @@ img {
 }
 
 #wrapper_list{
-	background-color: #FAAC58;
+	/*background-color: #FAAC58;*/
 	text-align: center;
+	width: 100%;
 }
 
-
-.list{
-	font-size: 140%;
-	width: 41%;
-    padding: 8px 30px;
-    margin: 2em 0 2em 20em;
-    color: #000000;
-    border-top: double 7px #000000;
-    border-bottom: double 7px #000000;
-    font-family: “STKaiti”, “ヒラギノ明朝 Pro W3″, “Hiragino Mincho Pro”, serif;
-	font-weight: 800;
-	background-color: #F5A9BC;
-}
 .list p {
-text-align: left;
+	text-align: left;
     margin: 10px 0 10px 10px; 
     padding: 0;
 }
 
 p#p1 {
 	text-align: center;
-	margin-left: 15%;
 	font-size: 120%;
 	font-weight: boilder;
 }
 
+.list{
+	font-size: 140%;
+	width: 41%;
+    padding: 8px 30px;
+    margin: 2em 0 2em 16em;
+    color: #000000;
+    border-top: double 7px #000000;
+    border-bottom: double 7px #000000;
+	font-weight: 800;
+	/*background-color: #F5A9BC;*/
+}
+
 p#p2 {
-	background-color: #58FA58;
+	/*background-color: #58FA58;*/
 	padding: 0;
-	line-height:300%;
+	line-height:200%;
 }
 
 
@@ -179,10 +173,12 @@ body{
 h1 {
 	background: #BDBDBD;    /*背景色*/
 	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+	font-size: 35;
+	text-align: center;
 }
 
 #container {
-	padding-left:2em;
+	/*padding-left:2em;*/
 }
 
 .text_1 {
@@ -233,21 +229,21 @@ h2{
 	border-left: 6px solid #ccc;
 }
 .president {
-	float:right;
-	right: 0px;
+	display:block;
+	text-align: right;
 	width: auto;
 	height: auto;
-	margin-left: 50px;
+	margin-bottom: 15%;
 }
 
-img {
+/*img {
 	float:right;
 	top: 50px;
 	right: 0px;
 	max-width: 300px;
 	max-height: 285px;
 	margin-bottom: 25px;
-}
+}*/
 
 .presidentTx {
 	text-align: right;
@@ -255,27 +251,46 @@ img {
 }
 
 .hello {
-	padding-left:4em;
-	font-style: italic;
-	font-family: “STKaiti”, “ヒラギノ明朝 Pro W3″, “Hiragino Mincho Pro”, serif;
-	font-weight: 800; 
-	font-size: 14;
+	display: block;
 	line-height: 300%
 }
 
-.list {
-    padding: 8px 19px;
-    margin: 2em 0em 2em 0;
-    color: #2c2c2f;
-    background: #cde4ff;
-    border-top: solid 5px #5989cf;
-    border-bottom: solid 5px #5989cf;
+
+#wrapper_list{
+	/*background-color: #FAAC58;*/
+	text-align: center;
+}
+
+
+.list{
+	font-size: 140%;
+	width: 75%;
+    padding: 8px 30px;
+    margin: 2em 0 2em 1.5em;
+    color: #000000;
+    border-top: double 7px #000000;
+    border-bottom: double 7px #000000;
+	font-weight: 800;
+	/*background-color: #F5A9BC;*/
+}
+.list p {
+	text-align: left;
+    margin: 10px 0 10px 10px; 
+    padding: 0;
 }
 
 p#p1 {
+	text-align: center;
 	font-size: 120%;
 	font-weight: boilder;
 }
+
+p#p2 {
+	/*background-color: #58FA58;*/
+	padding: 0;
+	line-height:300%;
+}
+
 
 
 }
@@ -298,7 +313,7 @@ h1 {
 }
 
 #container {
-	padding-left:2em;
+	/*padding-left:2em;*/
 }
 
 .text_1 {
@@ -321,79 +336,23 @@ h1 {
 }
 
 
-p {
+p#upper_text {
 	text-align: center;		/*文章中央揃え*/
-	line-height:200%	
+	line-height: 180%;	
 	padding-left:2em;
-	font-size: 12;
+	font-size: 80%;
 }
 
 
 
 /************** 社長あいさつより下 ****************/
 
-
-
-.container1 {
-	position: relative;
-}
-
-.top-words {
-	display: block;
-	/* padding-left:7em;*/
-	text-align: center;
-}
-
-h2{
-	text-align: left;
-	padding: .5em .75em;
-	background-color: #f6f6f6;
-	border-left: 6px solid #ccc;
-}
-.president {
-	right: 0px;
-	width: 100%;
-	height: auto;
-	margin-left: 50px;
-}
-
-img {
-	float:right;
-	top: 50px;
-	right: 0px;
-	max-width: 300px;
-	max-height: 285px;
-	margin-bottom: 25px;
+.hello {
+	font-size: 80%;
 }
 
 .presidentTx {
-	width: 100%;
-	text-align: right;
-	margin-top: 320px;
-	margin-bottom: 20px;
-}
-
-.hello {
-	padding-left:4em;
-	font-style: italic;
-	font-family: “STKaiti”, “ヒラギノ明朝 Pro W3″, “Hiragino Mincho Pro”, serif;
-	font-weight: 800; 
-	font-size: 12;
-	line-height:300%
-}
-
-.list {
-    padding: 8px 19px;
-    margin: 2em 0em 2em 0;
-    color: #2c2c2f;
-    background: #cde4ff;
-    border-top: solid 5px #5989cf;
-    border-bottom: solid 5px #5989cf;
-}
-
-p#p1 {
-	font-size: 120%;
-	font-weight: boilder;
+	font-size: 80%;
 }
 
 
