--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -5,150 +5,150 @@
 
 
 
-body{
-	width: 1366px;		/*全体の横幅*/
-	padding-left: 10%;		/* 両端に空白 */
-	padding-right: 10%;
-	font-family: "游ゴシック";
-}
+	body{
+		width: 1366px;		/*全体の横幅*/
+		padding-left: 10%;		/* 両端に空白 */
+		padding-right: 10%;
+		font-family: "游ゴシック";
+	}
 
-h1 {
-	background: #BDBDBD;    /*背景色*/
-	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
-	font-size: 35;
-	text-align: center;
-}
+	h1 {
+		background: #BDBDBD;    /*背景色*/
+		padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+		font-size: 35;
+		text-align: center;
+	}
 
-#container {
-	padding: 0 2em 0 2em;
-	margin-top: 2%;
-}
+	#container {
+		padding: 0 2em 0 2em;
+		margin-top: 2%;
+	}
 
-h2{
-	text-align: left;
-	padding: .5em .75em;
-	margin-bottom: 20px;
-	background-color: #f6f6f6;
-	border-left: 6px solid #ccc;
-}
+	h2{
+		text-align: left;
+		padding: .5em .75em;
+		/*margin-bottom: 20px;*/
+		background-color: #f6f6f6;
+		border-left: 6px solid #ccc;
+	}
 
-/* 経営理念下見出し */
-.text_1 {
-	text-align: center;
-	font-size: 25;
-	font-weight: 600; 		/* フォントの濃さ */
-	margin: 40px 170px;		/* 上下に空白 */
-	position: relative;		
-	padding: 0.25em 0;
-}
-.text_1:after {		/* 見出し下線 */
-	content: "";
-	display: block;
-	height: 4px;
-	background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
-	background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-	background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
-}
+	/* 経営理念下見出し */
+	.text_1 {
+		text-align: center;
+		font-size: 25;
+		font-weight: 600; 		/* フォントの濃さ */
+		margin: 40px 170px;		/* 上下に空白 */
+		position: relative;		
+		padding: 0.25em 0;
+	}
+	.text_1:after {		/* 見出し下線 */
+		content: "";
+		display: block;
+		height: 4px;
+		background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
+		background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
+		background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+	}
 
-p#upper_text{
-	text-align: center;		/*文章中央揃え*/
-	line-height: 200%;	/* 行間 */
-	margin: 70px 60px 60px 60px;
-	font-size: 110%;
-}
-
-
-
-/************** 社長あいさつより下 ****************/
+	p#text_1_comment{
+		text-align: center;		/*文章中央揃え*/
+		line-height: 200%;	/* 行間 */
+		margin: 40px 60px 40px 60px;
+		font-size: 110%;
+	}
 
 
 
-.container1 {
-	position: relative;
-}
+	/************** 社長あいさつより下 ****************/
 
-.top-words {
-	margin-bottom: 10px;
-	padding-left:2em;
-}
 
-#upper_conteiner {
-	padding: 0 2em;
-	/*background-color: yellow;*/
-	height: 400px;
-	width: 100%;
-	margin: 0 20px;
-	display: table;
-}
 
-.hello {
-	width: 55%;
-	height: 100%;
-	margin: 20px;
-	padding: 40px 0 30px 0;
-	/*background-color: #58FA58;*/
-	line-height: 215%;
-	display: table-cell;
-	vertical-align: top;
-}
+	.container1 {
+		position: relative;
+		padding: 0 2em 0 2em;
+	}
 
-.president {
-	display: table-cell;
-	/*text-align: right;*/
-	/*background-color: #81F7F3;*/
-	width: 100%;
-	padding: 0 0 0 40px;
-}
+	.top-words {
+		margin-bottom: 10px;
+	}
 
-img {
+	#wrap_president {
+		padding: 0 2em;
+		/*background-color: yellow;*/
+		height: 400px;
+		width: 100%;
+		margin: 0 20px;
+		display: table;
+	}
 
-}
+	.president_comment {
+		width: 55%;
+		height: 100%;
+		margin: 20px;
+		padding: 50px 0 30px 0;
+		/*background-color: #58FA58;*/
+		line-height: 215%;
+		display: table-cell;
+		vertical-align: top;
+	}
 
-.presidentTx {
-	width: auto;
-	margin: 10px 180px 0 0;
-	text-align:right;
-}
+	.president {
+		display: table-cell;
+		/*text-align: right;*/
+		/*background-color: #81F7F3;*/
+		width: 100%;
+		padding: 0 0 0 40px;
+	}
 
-.clear {
-    clear:both;
-}
+	img {
 
-#wrapper_list{
-	/*background-color: #FAAC58;*/
-	text-align: center;
-	width: 100%;
-}
+	}
 
-.list p {
-	text-align: left;
-    margin: 10px 0 10px 10px; 
-    padding: 0;
-}
+	.presidentName {
+		width: auto;
+		margin: 10px 180px 0 0;
+		text-align:right;
+	}
 
-p#p1 {
-	text-align: center;
-	font-size: 120%;
-	font-weight: boilder;
-}
+	.clear {
+	    clear:both;
+	}
 
-.list{
-	font-size: 140%;
-	width: 41%;
-    padding: 8px 30px;
-    margin: 2em 0 2em 16em;
-    color: #000000;
-    border-top: double 7px #000000;
-    border-bottom: double 7px #000000;
-	font-weight: 800;
-	/*background-color: #F5A9BC;*/
-}
+	#wrapper_list{
+		/*background-color: #FAAC58;*/
+		text-align: center;
+		width: 100%;
+	}
 
-p#p2 {
-	/*background-color: #58FA58;*/
-	padding: 0;
-	line-height:200%;
-}
+	.list p {
+		text-align: left;
+	    margin: 10px 0 10px 10px; 
+	    padding: 0;
+	}
+
+	p#p1 {
+		text-align: center;
+		font-size: 120%;
+		font-weight: boilder;
+	}
+
+	.list{
+		font-size: 140%;
+		width: 41%;
+	    padding: 8px 30px;
+	    margin: 2em 0 2em 16em;
+	    color: #000000;
+	    border-top: double 7px #000000;
+	    border-bottom: double 7px #000000;
+		font-weight: 800;
+		/*background-color: #F5A9BC;*/
+	}
+
+	p#p2 {
+		/*background-color: #58FA58;*/
+		padding: 0;
+		line-height:200%;
+	}
 
 
 }
@@ -164,132 +164,132 @@ p#p2 {
 
 
 
-body{
-	/*width: 1366px;		全体の横幅*/
-	padding-left: 10%;
-	padding-right: 10%;
-}
+	body{
+		/*width: 1366px;		全体の横幅*/
+		padding-left: 10%;
+		padding-right: 10%;
+	}
 
-h1 {
-	background: #BDBDBD;    /*背景色*/
-	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
-	font-size: 35;
-	text-align: center;
-}
+	h1 {
+		background: #BDBDBD;    /*背景色*/
+		padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+		font-size: 35;
+		text-align: center;
+	}
 
-#container {
-	/*padding-left:2em;*/
-}
+	#container {
+		/*padding-left:2em;*/
+	}
 
-.text_1 {
-	text-align: center;
-	font-size: 16;
-	font-weight: 600; 
-	margin: 50px 0;
-	/*margin-right: 200px;
-	margin-left: 200px;*/
-	position: relative;
-	padding: 0.25em 0;
-}
-.text_1:after {
-	content: "";
-	display: block;
-	height: 4px;
-	background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
-	background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-	background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
-}
+	.text_1 {
+		text-align: center;
+		font-size: 16;
+		font-weight: 600; 
+		margin: 50px 0;
+		/*margin-right: 200px;
+		margin-left: 200px;*/
+		position: relative;
+		padding: 0.25em 0;
+	}
+	.text_1:after {
+		content: "";
+		display: block;
+		height: 4px;
+		background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
+		background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
+		background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+	}
 
-p {
-	text-align: center;		/*文章中央揃え*/
-	line-height:200%	
-	padding-left:2em;
-	font-size: 14;
-}
-
-
-/************** 社長あいさつより下 ****************/
+	p {
+		text-align: center;		/*文章中央揃え*/
+		line-height:200%	
+		padding-left:2em;
+		font-size: 14;
+	}
 
 
-
-.container1 {
-	position: relative;
-}
-
-.top-words {
-	display: block;
-	/* padding-left:7em;*/
-	text-align: center;
-}
-
-h2{
-	text-align: left;
-	padding: .5em .75em;
-	background-color: #f6f6f6;
-	border-left: 6px solid #ccc;
-}
-.president {
-	display:block;
-	text-align: right;
-	width: auto;
-	height: auto;
-	margin-bottom: 15%;
-}
-
-/*img {
-	float:right;
-	top: 50px;
-	right: 0px;
-	max-width: 300px;
-	max-height: 285px;
-	margin-bottom: 25px;
-}*/
-
-.presidentTx {
-	text-align: right;
-	margin-top: 20px;
-}
-
-.hello {
-	display: block;
-	line-height: 300%
-}
+	/************** 社長あいさつより下 ****************/
 
 
-#wrapper_list{
-	/*background-color: #FAAC58;*/
-	text-align: center;
-}
+
+	.container1 {
+		position: relative;
+	}
+
+	.top-words {
+		display: block;
+		/* padding-left:7em;*/
+		text-align: center;
+	}
+
+	h2{
+		text-align: left;
+		padding: .5em .75em;
+		background-color: #f6f6f6;
+		border-left: 6px solid #ccc;
+	}
+	.president {
+		display:block;
+		text-align: right;
+		width: auto;
+		height: auto;
+		margin-bottom: 15%;
+	}
+
+	/*img {
+		float:right;
+		top: 50px;
+		right: 0px;
+		max-width: 300px;
+		max-height: 285px;
+		margin-bottom: 25px;
+	}*/
+
+	.presidentName {
+		text-align: right;
+		margin-top: 20px;
+	}
+
+	.president_comment {
+		display: block;
+		line-height: 300%
+	}
 
 
-.list{
-	font-size: 140%;
-	width: 75%;
-    padding: 8px 30px;
-    margin: 2em 0 2em 1.5em;
-    color: #000000;
-    border-top: double 7px #000000;
-    border-bottom: double 7px #000000;
-	font-weight: 800;
-	/*background-color: #F5A9BC;*/
-}
-.list p {
-	text-align: left;
-    margin: 10px 0 10px 10px; 
-    padding: 0;
-}
+	#wrapper_list{
+		/*background-color: #FAAC58;*/
+		text-align: center;
+	}
 
-p#p1 {
-	text-align: center;
-	font-size: 120%;
-	font-weight: boilder;
-}
 
-p#p2 {
-	/*background-color: #58FA58;*/
-	padding: 0;
-	line-height:300%;
-}
+	.list{
+		font-size: 140%;
+		width: 75%;
+	    padding: 8px 30px;
+	    margin: 2em 0 2em 1.5em;
+	    color: #000000;
+	    border-top: double 7px #000000;
+	    border-bottom: double 7px #000000;
+		font-weight: 800;
+		/*background-color: #F5A9BC;*/
+	}
+	.list p {
+		text-align: left;
+	    margin: 10px 0 10px 10px; 
+	    padding: 0;
+	}
+
+	p#p1 {
+		text-align: center;
+		font-size: 120%;
+		font-weight: boilder;
+	}
+
+	p#p2 {
+		/*background-color: #58FA58;*/
+		padding: 0;
+		line-height:300%;
+	}
 
 
 
@@ -307,53 +307,53 @@ p#p2 {
 
 
 
-h1 {
-	background: #BDBDBD;    /*背景色*/
-	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
-}
+	h1 {
+		background: #BDBDBD;    /*背景色*/
+		padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+	}
 
-#container {
-	/*padding-left:2em;*/
-}
+	#container {
+		/*padding-left:2em;*/
+	}
 
-.text_1 {
-	text-align: center;
-	font-size: 16;
-	font-weight: 600; 
-	margin: 50px 0;
-	/*margin-right: 200px;
-	margin-left: 200px;*/
-	position: relative;
-	padding: 0.25em 0;
-}
-.text_1:after {
-	content: "";
-	display: block;
-	height: 4px;
-	background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
-	background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-	background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
-}
-
-
-p#upper_text {
-	text-align: center;		/*文章中央揃え*/
-	line-height: 180%;	
-	padding-left:2em;
-	font-size: 80%;
-}
+	.text_1 {
+		text-align: center;
+		font-size: 16;
+		font-weight: 600; 
+		margin: 50px 0;
+		/*margin-right: 200px;
+		margin-left: 200px;*/
+		position: relative;
+		padding: 0.25em 0;
+	}
+	.text_1:after {
+		content: "";
+		display: block;
+		height: 4px;
+		background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
+		background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
+		background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+	}
 
 
+	p#text_1_comment {
+		text-align: center;		/*文章中央揃え*/
+		line-height: 180%;	
+		padding-left:2em;
+		font-size: 80%;
+	}
 
-/************** 社長あいさつより下 ****************/
 
-.hello {
-	font-size: 80%;
-}
 
-.presidentTx {
-	font-size: 80%;
-}
+	/************** 社長あいさつより下 ****************/
+
+	.president_comment {
+		font-size: 80%;
+	}
+
+	.presidentName {
+		font-size: 80%;
+	}
 
 
 }
