--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -3,8 +3,6 @@
 ******************************** */
 @media screen and (min-width: 769px){
 
-
-
 	body{
 		width: 1366px;		/*全体の横幅*/
 		padding-left: 10%;		/* 両端に空白 */
@@ -27,7 +25,6 @@
 	h2{
 		text-align: left;
 		padding: .5em .75em;
-		/*margin-bottom: 20px;*/
 		background-color: #f6f6f6;
 		border-left: 6px solid #ccc;
 	}
@@ -47,7 +44,7 @@
 		height: 4px;
 		background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
 		background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-		background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+		background: linear-gradient(to right, rgb(0, 60, 250), transparent); 
 	}
 
 	p#text_1_comment{
@@ -61,8 +58,6 @@
 
 	/************** 社長あいさつより下 ****************/
 
-
-
 	.container1 {
 		position: relative;
 		padding: 0 2em 0 2em;
@@ -74,7 +69,6 @@
 
 	#wrap_president {
 		padding: 0 2em;
-		/*background-color: yellow;*/
 		height: 400px;
 		width: 100%;
 		margin: 0 20px;
@@ -86,7 +80,6 @@
 		height: 100%;
 		margin: 20px;
 		padding: 50px 0 30px 0;
-		/*background-color: #58FA58;*/
 		line-height: 215%;
 		display: table-cell;
 		vertical-align: top;
@@ -94,8 +87,6 @@
 
 	.president {
 		display: table-cell;
-		/*text-align: right;*/
-		/*background-color: #81F7F3;*/
 		width: 100%;
 		padding: 0 0 0 40px;
 	}
@@ -115,7 +106,6 @@
 	}
 
 	#wrapper_list{
-		/*background-color: #FAAC58;*/
 		text-align: center;
 		width: 100%;
 	}
@@ -141,11 +131,9 @@
 	    border-top: double 7px #000000;
 	    border-bottom: double 7px #000000;
 		font-weight: 800;
-		/*background-color: #F5A9BC;*/
 	}
 
 	p#p2 {
-		/*background-color: #58FA58;*/
 		padding: 0;
 		line-height:200%;
 	}
@@ -177,17 +165,11 @@
 		text-align: center;
 	}
 
-	#container {
-		/*padding-left:2em;*/
-	}
-
 	.text_1 {
 		text-align: center;
 		font-size: 16;
 		font-weight: 600; 
 		margin: 50px 0;
-		/*margin-right: 200px;
-		margin-left: 200px;*/
 		position: relative;
 		padding: 0.25em 0;
 	}
@@ -197,7 +179,7 @@
 		height: 4px;
 		background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
 		background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-		background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+		background: linear-gradient(to right, rgb(0, 60, 250), transparent); 
 	}
 
 	p {
@@ -218,7 +200,6 @@
 
 	.top-words {
 		display: block;
-		/* padding-left:7em;*/
 		text-align: center;
 	}
 
@@ -236,15 +217,6 @@
 		margin-bottom: 15%;
 	}
 
-	/*img {
-		float:right;
-		top: 50px;
-		right: 0px;
-		max-width: 300px;
-		max-height: 285px;
-		margin-bottom: 25px;
-	}*/
-
 	.presidentName {
 		text-align: right;
 		margin-top: 20px;
@@ -257,7 +229,6 @@
 
 
 	#wrapper_list{
-		/*background-color: #FAAC58;*/
 		text-align: center;
 	}
 
@@ -271,7 +242,6 @@
 	    border-top: double 7px #000000;
 	    border-bottom: double 7px #000000;
 		font-weight: 800;
-		/*background-color: #F5A9BC;*/
 	}
 	.list p {
 		text-align: left;
@@ -286,7 +256,6 @@
 	}
 
 	p#p2 {
-		/*background-color: #58FA58;*/
 		padding: 0;
 		line-height:300%;
 	}
@@ -312,17 +281,11 @@
 		padding: 0.5em;         /*文字まわり（上下左右）の余白*/
 	}
 
-	#container {
-		/*padding-left:2em;*/
-	}
-
 	.text_1 {
 		text-align: center;
 		font-size: 16;
 		font-weight: 600; 
 		margin: 50px 0;
-		/*margin-right: 200px;
-		margin-left: 200px;*/
 		position: relative;
 		padding: 0.25em 0;
 	}
@@ -332,7 +295,7 @@
 		height: 4px;
 		background: -moz-linear-gradient(to right, rgb(0, 60, 250), transparent);
 		background: -webkit-linear-gradient(to right, rgb(0, 60, 250), transparent);
-		background: linear-gradient(to right, rgb(0, 60, 250), transparent); /*red(230,90,90)*/
+		background: linear-gradient(to right, rgb(0, 60, 250), transparent); 
 	}
 
 
