5/17 拝師追加分

--- a/style_working.css
+++ b/style_working.css
@@ -12,7 +12,7 @@
 /* 仕事内容部分*/
 h1 {
 	background: #BDBDBD;    /*背景色*/
-	padding: 0.5em;         /*文字まわり（上下左右）の余白*/
+	padding: 0.5em;         /*文字まわり（上下左右）余白*/
 }
 
 h2 {
