概要インデックス色変更

--- a/style_outline.css
+++ b/style_outline.css
@@ -30,7 +30,7 @@ hr {
 
 .index {
 	width: 20%;
-	background-color: #CEF6F5;
+	background-color: #EFFBFB;
 	display: table-cell;
 	vertical-align: middle;
 	padding-left: 1%;
