--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ img {
 	border:0;
 }
 
+.clear {
+	clear:both;
+}
+
 /*===============================================
 ●style.css PC 画面の横幅が769px以上
 ================================================*/
