募集要項の項目見出しの修正

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ img {
 	    font-size: 1.4em;
 	    font-family: 游明朝, serif;
 	    color: rgb(41, 51, 131);
-	    padding: 0.25em 1em;
+	    padding: 0.25em 0;
 	    margin:auto;
 	}
 }
