バックグラウンドイメージ変更

--- a/style_outline.css
+++ b/style_outline.css
@@ -7,7 +7,7 @@ body{
 	padding-left: 10%;
 	padding-right: 10%;
 	font-family: "游ゴシック";
-	background-image: url(images/background_image.png);
+	background-image: url(images/background.png);
 }
 
 .title {
