--- a/style_philosophy.css
+++ b/style_philosophy.css
@@ -8,7 +8,7 @@
 		padding-left: 10%;
 		padding-right: 10%;
 		font-family: "游ゴシック";
-		background-image: url(images/background_image.png);
+		background-image: url(images/background.png);
 		margin: auto;
 	}
 
